--- a/views/home.ejs
+++ b/views/home.ejs
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h2>Total no of users are : <%= count %></h2>
-    <button>Join us today</button>
+    <a href="/user"><button>Join us today</button></a>
 </body>
 </html>
